EA-2708: Minor code improvements
- replaced "Metis" with "Datasource" in variable names, to account for
Zoho dereferencing
- gitignored Zoho sdk log files