@@ -3,7 +3,6 @@ package eu.europeana.entitymanagement.zoho.organization;
 import static eu.europeana.entitymanagement.zoho.utils.ZohoUtils.toIsoLanguage;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -24,12 +23,10 @@ public class ZohoOrganizationConverter {
    
     public Organization convertToOrganizationEntity(Record record) {
         Organization org = new Organization();
-        org.setAbout(ZohoConstants.URL_ORGANIZATION_PREFFIX + Long.toString(record.getId()));
-        org.setIdentifier(ZohoUtils.stringListSupplier(Arrays.asList(new String[]{Long.toString(record.getId())})));
+        org.setAbout(ZohoConstants.URL_ORGANIZATION_PREFFIX + record.getId());
+        org.setIdentifier(ZohoUtils.stringListSupplier(List.of(Long.toString(record.getId()))));
         String isoLanguage = toIsoLanguage(ZohoUtils.stringFieldSupplier(record.getKeyValue(ZohoConstants.LANG_ORGANIZATION_NAME_FIELD)));
         org.setPrefLabel(ZohoUtils.createMap(isoLanguage, ZohoUtils.stringFieldSupplier(record.getKeyValue(ZohoConstants.ACCOUNT_NAME_FIELD))));
-//        String isoLanguage1 = toIsoLanguage(ZohoUtils.stringFieldSupplier(record.getKeyValue(ZohoConstants.LANG_ALTERNATIVE_FIELD)));
-//        org.setAltLabel(ZohoUtils.createMapWithLists(isoLanguage1, ZohoUtils.stringFieldSupplier(record.getKeyValue(ZohoConstants.ALTERNATIVE_FIELD))));
         org.setAltLabel(getAllAltLabel(record));
 
         String acronym = ZohoUtils.stringFieldSupplier(record.getKeyValue(ZohoConstants.ACRONYM_FIELD));
